--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   go_router: ^14.8.1
   google_fonts: ^6.2.1
+  google_generative_ai: ^0.2.0
   google_sign_in: ^6.3.0
   hooks_riverpod: ^2.6.1
   http: ^1.3.0
