--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
     sdk: flutter
   flutter_animate: ^4.5.2
   flutter_riverpod: ^2.6.1
+  flutter_svg: ^2.0.17
   go_router: ^14.8.1
   google_fonts: ^6.2.1
   google_generative_ai: ^0.2.0
@@ -59,6 +60,7 @@ flutter:
     - assets/images/onboarding1_bombastik_removedbg.png
     - assets/images/BombastikLogoDarkMode.png
     - assets/images/background_image_loginDarkMode.png
+    - assets/images/In no time-amico.svg
   uses-material-design: true
   #fonts:
   # - family: Inter
