--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
   firebase_storage: ^12.4.4
+  fl_chart: ^0.65.0
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.2
@@ -29,6 +30,7 @@ dependencies:
   http: ^1.3.0
   image_cropper: ^9.0.0
   image_picker: ^1.1.2
+  intl: ^0.19.0
   provider: ^6.1.2
   riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
